# StartGameSettings

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/: StartGameSettings_Difficulty.esp  StartGameSettings_SurvivalMode.esp
data/Interface/: StartMenu.swf
data/Interface/Translations/: StartGameSettings_Difficulty_ENGLISH.txt  StartGameSettings_ENGLISH.txt  StartGameSettings_SurvivalMode_ENGLISH.txt
data/SKSE/Plugins/StartGameSettings/: StartGameSettings_Difficulty.json  StartGameSettings_SurvivalMode.json
docs/: StartGameSettings.schema.json
src/Hooks/: Difficulty.cpp  Difficulty.hpp  MainMenu.cpp  MainMenu.hpp
src/RE/: Offset.hpp
src/Settings/: Collection.hpp  GameDelegate.cpp  GameDelegate.hpp  GroupCondition.hpp  Item.inl  StaticCollection.cpp  StaticCollection.hpp
src/common/: PCH.hpp
src/export/: SKSEPlugin.cpp
